--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="./src/imagenes/Logos/Favicon.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/style/grid/index.css">
     <link rel="stylesheet" href="./src/style/base.css">
     <link rel="stylesheet" href="./src/style/responsivo.css">
 </head>
